get the least functional web browsing done with gpt5

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -12,6 +12,10 @@
                    value="http://localhost:8001">
             <button id="navigate-btn">Go</button>
         </div>
+        <div class="natural-language-bar hidden" id="natural-language-bar">
+            <input type="text" id="question-input" placeholder="Ask something in natural language (e.g., 'search for cheese under $5')">
+            <button id="ask-btn">Ask</button>
+        </div>
     </div>
 
     <div class="content-area">
