now links can work, browser can navigate a socketagent service

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <div class="browser-chrome">
+        <div class="nav-controls">
+            <button id="back-btn" class="nav-btn" disabled>←</button>
+            <button id="forward-btn" class="nav-btn" disabled>→</button>
+            <button id="home-btn" class="nav-btn">🏠</button>
+        </div>
         <div class="address-bar">
             <input type="text" id="url-input" placeholder="Enter Socket Agent API URL (e.g., http://localhost:8001)"
                    value="http://localhost:8001">
