add toggle button to switch between openai API and local ollama

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,6 +11,12 @@
             <button id="back-btn" class="nav-btn" disabled>←</button>
             <button id="forward-btn" class="nav-btn" disabled>→</button>
             <button id="home-btn" class="nav-btn">🏠</button>
+            <div class="llm-toggle">
+                <button id="llm-toggle-btn" class="llm-btn" title="Switch LLM Provider">
+                    <span id="llm-icon">🤖</span>
+                    <span id="llm-name">OpenAI</span>
+                </button>
+            </div>
         </div>
         <div class="address-bar">
             <input type="text" id="url-input" placeholder="Enter Socket Agent API URL (e.g., http://localhost:8001)"
