implement hybrid browser: support both Socket Agent APIs and traditional HTML websites
- Add BrowserView integration for rendering traditional HTML sites
- Create HybridRenderer module to manage dual rendering modes
- Implement automatic detection: tries Socket Agent discovery first, falls back to HTML
- Add navigation interception in BrowserView to check for Socket Agent APIs
- Update IPC handlers for BrowserView management (show/hide/load)
- Modify renderer.js to use hybrid rendering system
- Add html-view container in UI for BrowserView content
- Support seamless switching between LLM-generated UI and Chromium rendering
- Enable universal browsing: Google, GitHub, etc. alongside Socket Agent services

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="address-bar">
-            <input type="text" id="url-input" placeholder="Enter Socket Agent API URL (e.g., http://localhost:8001)"
+            <input type="text" id="url-input" placeholder="Enter URL (Socket Agent API or regular website)"
                    value="http://localhost:8001">
             <button id="navigate-btn">Go</button>
         </div>
@@ -39,6 +39,10 @@
             <!-- Generated UI will be inserted here by the LLM -->
         </div>
 
+        <div id="html-view" class="hidden">
+            <!-- Traditional HTML websites rendered via BrowserView -->
+        </div>
+
         <div id="error" class="error-screen hidden">
             <h2>❌ Error</h2>
             <p id="error-message"></p>
@@ -51,6 +55,7 @@
         <div id="debug-content"></div>
     </div>
 
+    <script src="hybrid-renderer.js"></script>
     <script src="renderer.js"></script>
 </body>
 </html>
