refactor hybrid browser with color-coded mode indicators
Fixed critical resize handler bug causing crash on startup. Refactored the
hybrid rendering system to default to HTML mode with graceful Socket Agent
fallback. Added visual mode indicators with color-coded chrome - blue for
traditional HTML mode, purple for Socket Agent mode.

Changes:
- Fix resize handler registration in main process
- Add mode badge showing current rendering mode
- Implement color-coded chrome (blue/purple gradients)
- Simplify HybridRenderer with better defaults
- Improve visual feedback and transitions
- Clean up window lifecycle management

The browser now provides clear visual feedback about which rendering mode
is active, making the hybrid nature more intuitive for users.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="browser-chrome">
+    <div class="browser-chrome" id="browser-chrome">
         <div class="nav-controls">
             <button id="back-btn" class="nav-btn" disabled>←</button>
             <button id="forward-btn" class="nav-btn" disabled>→</button>
             <button id="home-btn" class="nav-btn">🏠</button>
+            <div class="mode-indicator" id="mode-indicator">
+                <span class="mode-badge" id="mode-badge" title="Current rendering mode">HTML</span>
+            </div>
             <div class="llm-toggle">
                 <button id="llm-toggle-btn" class="llm-btn" title="Switch LLM Provider">
                     <span id="llm-icon">🤖</span>
@@ -19,8 +22,8 @@
             </div>
         </div>
         <div class="address-bar">
-            <input type="text" id="url-input" placeholder="Enter URL (Socket Agent API or regular website)"
-                   value="http://localhost:8001">
+            <input type="text" id="url-input" placeholder="Enter URL or Socket Agent API"
+                   value="">
             <button id="navigate-btn">Go</button>
         </div>
     </div>
