--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -20,6 +20,10 @@
                     <span id="llm-name">OpenAI</span>
                 </button>
             </div>
+            <button id="wallet-btn" class="wallet-btn" title="Solana Wallet">
+                <span class="wallet-icon">💰</span>
+                <span id="wallet-balance" class="wallet-balance">--</span>
+            </button>
         </div>
         <div class="address-bar">
             <input type="text" id="url-input" placeholder="Enter URL or Socket Agent API"
@@ -58,7 +62,178 @@
         <div id="debug-content"></div>
     </div>
 
+    <!-- Wallet Modal -->
+    <div id="wallet-modal" class="wallet-modal hidden">
+        <div class="wallet-modal-content">
+            <div class="wallet-header">
+                <h2>💰 Solana Wallet</h2>
+                <button class="wallet-close-btn" id="wallet-close-btn">×</button>
+            </div>
+
+            <!-- Wallet Setup Screen (first time) -->
+            <div id="wallet-setup" class="wallet-screen">
+                <div class="wallet-setup-options">
+                    <h3>Get Started</h3>
+                    <p>Create or import a Solana wallet to enable micropayments for AI-generated pages.</p>
+                    <button id="create-wallet-btn" class="wallet-action-btn primary">
+                        🆕 Create New Wallet
+                    </button>
+                    <button id="import-wallet-btn" class="wallet-action-btn">
+                        📥 Import Existing Wallet
+                    </button>
+                </div>
+            </div>
+
+            <!-- Create Wallet Flow -->
+            <div id="wallet-create" class="wallet-screen hidden">
+                <h3>Create New Wallet</h3>
+                <p>Set a password to encrypt your wallet. Keep this password safe!</p>
+                <div class="form-group">
+                    <label>Password:</label>
+                    <input type="password" id="create-password" placeholder="Enter password" class="wallet-input">
+                </div>
+                <div class="form-group">
+                    <label>Confirm Password:</label>
+                    <input type="password" id="create-password-confirm" placeholder="Confirm password" class="wallet-input">
+                </div>
+                <div class="wallet-actions">
+                    <button id="create-wallet-submit-btn" class="wallet-action-btn primary">Create Wallet</button>
+                    <button id="create-wallet-back-btn" class="wallet-action-btn">Back</button>
+                </div>
+            </div>
+
+            <!-- Show Recovery Phrase -->
+            <div id="wallet-recovery" class="wallet-screen hidden">
+                <h3>⚠️ Save Your Recovery Phrase</h3>
+                <p class="warning">Write down these 12 words in order. You'll need them to recover your wallet.</p>
+                <div class="recovery-phrase" id="recovery-phrase-display"></div>
+                <div class="wallet-actions">
+                    <button id="copy-recovery-btn" class="wallet-action-btn">📋 Copy to Clipboard</button>
+                    <button id="recovery-continue-btn" class="wallet-action-btn primary">I've Saved It</button>
+                </div>
+            </div>
+
+            <!-- Import Wallet Flow -->
+            <div id="wallet-import" class="wallet-screen hidden">
+                <h3>Import Wallet</h3>
+                <div class="import-tabs">
+                    <button class="import-tab active" data-tab="mnemonic">Recovery Phrase</button>
+                    <button class="import-tab" data-tab="private-key">Private Key</button>
+                </div>
+
+                <!-- Import from Mnemonic -->
+                <div id="import-mnemonic-tab" class="import-tab-content">
+                    <div class="form-group">
+                        <label>12-word Recovery Phrase:</label>
+                        <textarea id="import-mnemonic" placeholder="Enter your 12-word recovery phrase" class="wallet-textarea"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label>Password:</label>
+                        <input type="password" id="import-password" placeholder="Set a password" class="wallet-input">
+                    </div>
+                </div>
+
+                <!-- Import from Private Key -->
+                <div id="import-private-key-tab" class="import-tab-content hidden">
+                    <div class="form-group">
+                        <label>Private Key (base58):</label>
+                        <textarea id="import-private-key" placeholder="Enter your base58 private key" class="wallet-textarea"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label>Password:</label>
+                        <input type="password" id="import-key-password" placeholder="Set a password" class="wallet-input">
+                    </div>
+                </div>
+
+                <div class="wallet-actions">
+                    <button id="import-wallet-submit-btn" class="wallet-action-btn primary">Import Wallet</button>
+                    <button id="import-wallet-back-btn" class="wallet-action-btn">Back</button>
+                </div>
+            </div>
+
+            <!-- Unlock Wallet (returning users) -->
+            <div id="wallet-unlock" class="wallet-screen hidden">
+                <h3>Unlock Wallet</h3>
+                <div class="form-group">
+                    <label>Password:</label>
+                    <input type="password" id="unlock-password" placeholder="Enter password" class="wallet-input">
+                </div>
+                <div class="wallet-actions">
+                    <button id="unlock-wallet-btn" class="wallet-action-btn primary">Unlock</button>
+                    <button id="wallet-unlock-close-btn" class="wallet-action-btn">Cancel</button>
+                </div>
+                <div class="wallet-footer">
+                    <a href="#" id="reset-wallet-link">Reset/Import Different Wallet</a>
+                </div>
+            </div>
+
+            <!-- Main Wallet View (unlocked) -->
+            <div id="wallet-main" class="wallet-screen hidden">
+                <div class="wallet-info">
+                    <div class="wallet-address-section">
+                        <label>Address:</label>
+                        <div class="wallet-address">
+                            <code id="wallet-address-display">Loading...</code>
+                            <button id="copy-address-btn" class="copy-btn">📋</button>
+                        </div>
+                    </div>
+
+                    <div class="wallet-balance-section">
+                        <label>Balance:</label>
+                        <div class="balance-display">
+                            <span id="wallet-balance-display">-- SOL</span>
+                            <button id="refresh-balance-btn" class="refresh-btn">🔄</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="wallet-actions-section">
+                    <h4>Actions</h4>
+                    <button id="export-keys-btn" class="wallet-action-btn">🔑 Export Keys</button>
+                    <button id="lock-wallet-btn" class="wallet-action-btn">🔒 Lock Wallet</button>
+                </div>
+
+                <div class="wallet-info-text">
+                    <p>💡 This wallet automatically pays for AI-generated pages using micropayments.</p>
+                </div>
+            </div>
+
+            <!-- Export Keys View -->
+            <div id="wallet-export" class="wallet-screen hidden">
+                <h3>🔑 Export Keys</h3>
+                <p class="warning">⚠️ Never share these with anyone! Anyone with these can access your funds.</p>
+
+                <div class="export-section">
+                    <label>Recovery Phrase:</label>
+                    <div class="export-box">
+                        <div id="export-mnemonic-display" class="export-content">
+                            Unlock wallet first to view recovery phrase
+                        </div>
+                        <button id="copy-export-mnemonic-btn" class="copy-btn">📋 Copy</button>
+                    </div>
+                </div>
+
+                <div class="export-section">
+                    <label>Private Key (base58):</label>
+                    <div class="export-box">
+                        <code id="export-private-key-display" class="export-content">Loading...</code>
+                        <button id="copy-export-key-btn" class="copy-btn">📋 Copy</button>
+                    </div>
+                </div>
+
+                <div class="wallet-actions">
+                    <button id="export-back-btn" class="wallet-action-btn">Back</button>
+                </div>
+            </div>
+
+            <!-- Loading/Status Messages -->
+            <div id="wallet-status" class="wallet-status hidden"></div>
+        </div>
+    </div>
+
     <script src="hybrid-renderer.js"></script>
+    <script src="../wallet/solana-wallet.js"></script>
+    <script src="wallet-ui.js"></script>
     <script src="renderer.js"></script>
 </body>
 </html>
